# SimpleRayTracer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.hpp  common.hpp  environmentmap.hpp  hittable.hpp  hittable_list.hpp  interval.hpp  ray.hpp  sphere.hpp  vec3.hpp
src/: main.cpp
v0.1/: CMakeLists.txt  camera.hpp  color.hpp  common.hpp  hittable.hpp  hittable_list.hpp  main.cpp  material.hpp  ray.hpp  vec3.hpp
v0.1/images/: cam_01v.01.ppm  cam_02v.01.ppm  consistent_01v.01.ppm  consistent_02v.01.ppm  consistent_03v.01.ppm  consistent_04v.01.ppm  consistent_05v.01.ppm  consistent_06v.01.ppm  defocus_02v.01.ppm  defocus_03v.01.ppm  die_01v.01.ppm  die_02v.01.ppm  die_03v.01.ppm  die_04v.01.ppm  dm_image01.ppm  dm_image01v.01.ppm  dm_image02v.01.ppm  dm_image03v.01.ppm  dm_image04v.01.ppm  dm_image05v.01.ppm  dm_image06v.01.ppm  dm_image08v.01.ppm  fuzz_01v.01.ppm  image.ppm  image_2v.01.ppm  image_3v.01.ppm  m_image03v.01.ppm  sp_image13v.01.ppm  sp_image14v.01.ppm  sp_image15v.01.ppm  sp_image16v.01.ppm  sp_image17v.01.ppm  sp_image18v.01.ppm  sp_image19v.01.ppm  sp_image_2v.01.ppm  sp_image_3v.01.ppm  sp_image_4v.01.ppm  sp_image_5v.01.ppm
